[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "maeher"
version = "0.1.0"
description = "Python wrapper for the REAPER F0 tracker (Google)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/patkaiist/maeher"
Repository = "https://github.com/patkaiist/maeher"
"Bug Tracker" = "https://github.com/patkaiist/maeher/issues"

[project.optional-dependencies]
dev = ["pytest"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/maeher"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["*-musllinux_i686", "*-win32"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = "yum install -y cmake || apt-get install -y cmake || true"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
